# modfem

modfem2017/src/: CMakeLists.txt  CTestConfig.cmake  Makefile_explicit  ModFEM_OS.cmake  modfem_doxy_config
modfem2017/src/amg_mkb/: CMakeLists.txt  Makefile_explicit
modfem2017/src/amg_mkb/amg/: AMGMatrixUtilityFunctions.cpp  AMGMatrixUtilityFunctions.hpp  AMGRows.hpp  CFSplitter.cpp  CFSplitter.hpp  DirectSolver.cpp  DirectSolver.hpp  GaussSidelMethod.cpp  GaussSidelMethod.hpp  GeneralRSCFSplitter.cpp  GeneralRSCFSplitter.hpp  JacobiMethod.cpp  JacobiMethod.hpp  RSCFSplitter.cpp  RSCFSplitter.hpp  RowData.cpp  RowData.hpp  RowDataCollector.cpp  RowDataCollector.hpp  Smoother.hpp
modfem2017/src/amg_mkb/lad_petsc/: AMGSolverStructure.cpp  AMGSolverStructure.hpp  ErrorEvaluator.hpp  GhostBlockExchanger.c  GhostBlockExchanger.h  KnownSolutionErrorEvaluator.cpp  KnownSolutionErrorEvaluator.hpp  ResidualBasedErrorEvaluator.cpp  ResidualBasedErrorEvaluator.hpp  las_ns_supg_petsc.cpp  las_ns_supg_petsc.hpp  las_ns_supg_petsc2.cpp  las_petsc_intf.cpp  las_petsc_intf.hpp
modfem2017/src/amg_mkb/lsd_amg/: lah_amg_interface.h  las_amg_interface.cpp  lsh_ns_supg_ext_intf.h  lss_ns_supg_ext_intf.cpp
modfem2017/src/amg_mkb/test/: CMakeLists.txt
modfem2017/src/apd_dg_prism/: CMakeLists.txt  Makefile_explicit  aph_dg_prism.h  aps_dg_prism_intf.c  aps_dg_util.c  aps_gauss_util.c
modfem2017/src/apd_std_lin/: CMakeLists.txt  Makefile_explicit  aph_std_lin.h  aps_gauss_util_std.c  aps_std_lin_intf.c  aps_std_util.c
modfem2017/src/apd_std_quad/: CMakeLists.txt  Makefile_explicit  aph_std_quad.h  aps_gauss_util_std.c  aps_std_quad_intf.c  aps_std_util.c
modfem2017/src/appd_dg_prism/: CMakeLists.txt  Makefile_explicit  apph_dg_prism.h  apps_dg_prism_intf.c
modfem2017/src/appd_std_lin/: CMakeLists.txt  Makefile_explicit  apph_std_lin.h  apps_std_lin_intf.c
modfem2017/src/cmake/Modules/: FindLapack.cmake  FindLibconfig.cmake  FindMETIS.cmake  FindOpenMP.cmake  FindPARMETIS.cmake  FindVoroPP.cmake  LibFindMacros.cmake
modfem2017/src/ddd_parmetis/: CMakeLists.txt  Csr.hpp  PCsr.hpp  dds_metis_parmetis.cpp  dds_parmetis_test.cpp
modfem2017/src/include/: aph_intf.h  apph_intf.h  ddh_intf.h  gitversion.h  info.h  lin_alg_intf.h  mf_version.h  mmh_intf.h  mmph_intf.h  mod_fem_viewer.h  pch_intf.h  pdh_control_intf.h  pdh_intf.h  sih_intf.h  svnversion.h  tmh_intf.h  uth_bc.h  uth_err.h  uth_intf.h  uth_io_compression.h  uth_io_files.h  uth_io_results.h  uth_log.h  uth_mat.h  uth_mesh.h  uth_system.h
modfem2017/src/lsd_mkb/: CMakeLists.txt  Makefile_explicit  lah_intf.h  las_intf.c  lsh_mkb_intf.h  lss_mkb_fem_intf.c  lss_mkb_intf.c
modfem2017/src/lsd_mkb/amg_ext/: amg_ext.c  amg_ext.h  lah_petsc_interface.h
modfem2017/src/lsd_mkb/lad_bcrs/: lah_bcrs.h  las_bcrs_intf.c
modfem2017/src/lsd_mkb/lad_block/: lah_block.h  las_block_intf.c  las_block_util.c
modfem2017/src/lsd_mkb/lad_crs/: iluk_for_crs.odt  lah_crs.h  las_crs_intf.c
modfem2017/src/lsd_mkb/lad_crs_generic/: lah_crs_generic.h  las_crs_generic_intf.c
modfem2017/src/lsd_mkb/lsd_mkb_core/: lsh_mkb_core.h  (+2 more)
modfem2017/src/mmd_prism/: CMakeLists.txt  Makefile_explicit  mmh_prism.h  mms_prism_datstr.c  mms_prism_input_gradmesh.c  mms_prism_intf.c  mms_prism_io_dump.c  mms_prism_ref.c  mms_prism_util.c  mms_util.c
modfem2017/src/mmd_prism_2D/: CMakeLists.txt  Makefile_explicit  mmh_prism_2D.h  mms_prism_2D_datstr.c  mms_prism_2D_input_gradmesh.c  mms_prism_2D_intf.c  mms_prism_2D_io_dump.c  mms_prism_2D_ref.c  mms_prism_2D_util.c  mms_util.c
modfem2017/src/mmd_remesh/: CMakeLists.txt  delanouy3d.cpp  delanouy3d.h  figury.cpp  figury.h  losowanie.cpp  losowanie.h  mms_prism_t4_remesh_intf.cpp  plansza.cpp  plansza.h  rozrost.cpp  rozrost.h  teksty.cpp  texty.h  ticooMesh3D.cpp  ticooMesh3D.h  wektor.cpp  wektor.h  ziarno.cpp  ziarno.h
modfem2017/src/mmd_t4_prism/: CMakeLists.txt  Common.h  Field.hpp  HybridMeshUnitTest.cpp  Makefile_explicit  ProfTimer.hpp  mms_prism_t4_intf.cpp
modfem2017/src/mmpd_adapter/: CMakeLists.txt  CompositeTransferData.hpp  CompositeTransfererWithOwnership.cpp  CompositeTransfererWithOwnership.hpp  EntitiesOwnership.hpp  TransferData.hpp  TransferWithOwnershipData.hpp  Transferer.cpp  Transferer.hpp  TransfererWithOwnership.cpp  TransfererWithOwnership.hpp  mmph_adaprter.h.old  mmph_adapter.h  mmph_ipid.h  mmph_mesh.h  mmps_adapter_intf.cpp  mmps_adapter_test.cpp  mmps_ipid.cpp  un_ord_map_selector.hpp
modfem2017/src/mmpd_prism/: CMakeLists.txt  Makefile_explicit  mmph_prism.h  mmps_prism_intf.c
modfem2017/src/mod_fem_viewer/: CMakeLists.txt  README.txt
modfem2017/src/pcd_mpi/: CMakeLists.txt  Makefile_explicit  pcs_mpi_intf.c
modfem2017/src/pcd_mpi_safe/: CMakeLists.txt  pcs_mpi_safe_intf.cpp  pcs_test.cpp
modfem2017/src/pdd_conv_diff/: CMakeLists.txt  Makefile_explicit
modfem2017/src/pdd_forming/: CMakeLists.txt
modfem2017/src/pdd_forming_mixed/: CMakeLists.txt
modfem2017/src/pdd_heat/: CMakeLists.txt
modfem2017/src/pdd_ns_supg/: CMakeLists.txt
modfem2017/src/pdd_ns_supg_ale/: CMakeLists.txt
modfem2017/src/pdd_ns_supg_heat_vof/: CMakeLists.txt
modfem2017/src/pdd_plast_flow_supg/: CMakeLists.txt
modfem2017/src/pdd_vof/: CMakeLists.txt
modfem2017/src/sid_lapack/: CMakeLists.txt  Makefile_explicit  sih_lapack.h  sis_lapack_intf.c
modfem2017/src/sid_mkb/: CMakeLists.txt  Makefile_explicit  sih_mkb.h  sih_mkb_fem_intf.h  sis_mkb_fem_intf.c  sis_mkb_intf.c
modfem2017/src/tmd_opencl/: CMakeLists.txt  Makefile_explicit  tmh_ocl.h  tms_ocl_intf.c  tms_ocl_num_int.c
modfem2017/src/utd_system/: CMakeLists.txt  Makefile_explicit  utd_threads.c  utd_threads.h
modfem2017/src/utd_util/: CMakeLists.txt  Makefile_explicit  base64.cpp  base64.h  miniz.c  miniz.h  uth_accel_intf.h  uts_accel_intf.c  uts_adapt.c  uts_bc.cpp  uts_coloring.cpp  uts_io_compression.cpp  uts_io_intf.cpp  uts_io_results.cpp  uts_log.cpp  uts_ls_intf.c  uts_mat.cpp  uts_mesh.cpp  uts_test.cpp  uts_util.c  uts_write_paraview.cpp
modfem2017/src/utilities/: a.out  nas2jk.c  nas2jk.c~  vkv.nas
(+682 files in other folders)
